Bug 3072 - Uninitialized pointer
Summary: Uninitialized pointer
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Lib/Xt (show other bugs)
Version: git
Hardware: x86 (IA32) Windows (All)
: high normal
Assignee: Xorg Project Team
QA Contact:
URL: http://bugs.xfree.org/show_bug.cgi?id...
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-04-20 02:31 UTC by Alexander Gottwald
Modified: 2007-01-23 17:34 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
fix (506 bytes, patch)
2005-04-20 02:34 UTC, Alexander Gottwald
ago: 6.8-branch?
Details | Splinter Review

Description Alexander Gottwald 2005-04-20 02:31:52 UTC
in some cases a pointer may be uninitialized which may lead to a segfault
Comment 1 Alexander Gottwald 2005-04-20 02:34:07 UTC
Created attachment 2469 [details] [review]
fix
Comment 2 Alexander Gottwald 2005-04-20 02:36:19 UTC
commited to HEAD

/cvs/xorg/xc/ChangeLog,v  <--  ChangeLog
new revision: 1.879; previous revision: 1.878
/cvs/xorg/xc/lib/Xt/Initialize.c,v  <--  lib/Xt/Initialize.c
new revision: 1.4; previous revision: 1.3
Comment 3 Adam Jackson 2005-07-03 13:32:40 UTC
closing, been applied.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.