Bugzilla #3072 (https://bugs.freedesktop.org/show_bug.cgi?id=3072)     attachment #2469 (https://bugs.freedesktop.org/attachment.cgi?id=2469):     fix uninitialized pointer in libXt on Win32. Reported by Dave Williss